# openclaw-virtual-avatar

./: .gitignore  CLAUDE.md  README.md  REPO_DESCRIPTION.txt  start.bat
app/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo
app/src/: App.tsx  index.css  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  progress.tsx  separator.tsx  textarea.tsx
app/src/lib/: api.ts  bridge.ts  useMediaRecorder.ts  windows.ts
app/src/views/: AvatarView.tsx  ChatView.tsx  RecordView.tsx  SettingsView.tsx
media-server/: environment.yml  package-lock.json  package.json  start.bat  start.sh
media-server/python/: requirements.txt  server.py
media-server/python/data/voices/vivian/: ref.txt
media-server/src/: index.js
plugin/: openclaw.plugin.json  package-lock.json  package.json
plugin/src/: index.ts
