[package]
name = "virtual-avatar-app"
version = "0.1.0"
description = "OpenClaw Virtual Avatar desktop shell"
authors = ["ChArLiiZ"]
edition = "2021"

[lib]
name = "virtual_avatar_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.8", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
